--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "react-select": "^5.7.5",
     "styled-components": "^6.0.7",
     "vite-plugin-svgr": "^3.2.0"
   },
@@ -39,5 +40,10 @@
   "lint-staged": {
     "*.{js,jsx}": "eslint --cache --fix",
     "*./src": "prettier --write"
-  }
+  },
+  "description": "Цей проєкт було створено за допомогою [Create Vite](https://vitejs.dev/). Для\r знайомства і налаштування додаткових можливостей\r [звернися до документації](https://vitejs.dev/guide/).",
+  "main": "authOperations.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
